# rdna3_isa

./: .editorconfig  Cargo.toml  LICENSE.txt
.github/workflows/: alpine.yml
examples/: decode_all.rs
src/: lib.rs  main.rs
src/dataformats/: mod.rs
src/decode/: mod.rs
src/decode/encodings/: cond.rs  ident.rs  microcode.rs  mod.rs
src/encodings/: cond.rs  ident.rs  microcode.rs  mod.rs
src/instructions/: encodings.rs  mod.rs
src/operand_types/: mod.rs
