[package]
name = "rdna3_isa"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }

[dependencies.serde]
version = "1.0.209"
features = ["derive"]

[dependencies.quick-xml]
version = "0.36.1"
features = ["serialize", "encoding"]
